  . Fixed bug GH-9750 (Generator memory leak when interrupted during argument
    evaluation. (Arnaud)

- Date:
  . Fixed bug GH-9763 (DateTimeZone ctr mishandles input and adds null byte if
    the argument is an offset larger than 100*60 minutes). (Derick)

- FPM:
  . Fixed bug GH-9754 (SaltStack (using Python subprocess) hangs when running
    php-fpm 8.1.11). (Jakub Zelenka)

- mysqli:
  . Fixed bug GH-9841 (mysqli_query throws warning despite using
    silenced error mode). (Kamil Tekiela)

- OpenSSL:
  . Fixed bug GH-8430 (OpenSSL compiled with no-md2, no-md4 or no-rmd160 does
    not build). (Jakub Zelenka, fsbruva)

- SOAP:
  . Fixed GH-9720 (Null pointer dereference while serializing the response).
    (cmb)

27 Oct 2022, PHP 8.0.25

- GD:
  . Fixed bug #81739: OOB read due to insufficient input validation in
    imageloadfont(). (CVE-2022-31630) (cmb)

- Hash:
  . Fixed bug #81738: buffer overflow in hash_update() on long parameter.
    (CVE-2022-37454) (nicky at mouha dot be)

- Session:
  . Fixed bug GH-9583 (session_create_id() fails with user defined save handler
    that doesn't have a validateId() method). (Girgias)

- Streams:
  . Fixed bug GH-9590 (stream_select does not abort upon exception or empty
    valid fd set). (Arnaud)

29 Sep 2022, PHP 8.0.24

- Core:
  . Fixed bug GH-9323 (Crash in ZEND_RETURN/GC/zend_call_function)
    (Tim Starling)
  . Fixed bug GH-9361 (Segmentation fault on script exit #9379). (cmb,
    Christian Schneider)
  . Fixed bug GH-9407 (LSP error in eval'd code refers to wrong class for static
    type). (ilutov)
  . Fixed bug #81727: Don't mangle HTTP variable names that clash with ones
    that have a specific semantic meaning. (CVE-2022-31629). (Derick)

- DOM:
  . Fixed bug #79451 (DOMDocument->replaceChild on doctype causes double free).
    (Nathan Freeman)

- FPM:
  . Fixed bug GH-8885 (FPM access.log with stderr begins to write logs to
    error_log after daemon reload). (Dmitry Menshikov)